@@ -1,0 +1,43 @@
+ID_ADD_BM=Ctrl+B
+ID_BIN_FILE=Ctrl+K
+ID_CLOSE=Ctrl+W
+ID_CLOSE_WINDOW=Ctrl+Shift+W
+ID_COMMENT=Ctrl+1
+ID_COPY=Ctrl+C
+ID_COPY_LINE=Ctrl+Y
+ID_CUT=Ctrl+X
+ID_CUT_LINE=Ctrl+D
+ID_DUP_LINE=Ctrl+Shift+C
+ID_EXIT=Ctrl+Q
+ID_FIND=Ctrl+Shift+F
+ID_FIND_REPLACE=Ctrl+R
+ID_GOTO_LINE=Ctrl+G
+ID_GOTO_MBRACE=Ctrl+Shift+B
+ID_INDENT=Tab
+ID_JOIN_LINES=Ctrl+J
+ID_KWHELPER=
+ID_LINE_AFTER=Ctrl+L
+ID_LINE_BEFORE=Ctrl+Shift+L
+ID_NEW=Ctrl+T
+ID_NEW_WINDOW=Ctrl+N
+ID_NEXT_MARK=Ctrl+Right
+ID_OPEN=Ctrl+O
+ID_PASTE=Ctrl+V
+ID_PRE_MARK=Ctrl+Left
+ID_PRINT=Ctrl+P
+ID_PRINT_SU=Ctrl+Shift+P
+ID_QUICK_FIND=Ctrl+F
+ID_REDO=Ctrl+Shift+Z
+ID_RUN_LAUNCH=F5
+ID_SAVE=Ctrl+S
+ID_SAVEAS=Ctrl+Shift+S
+ID_SELECTALL=Ctrl+A
+ID_SHOW_SHELF=Ctrl+Alt+S
+ID_TRANSPOSE=Ctrl+T
+ID_UNCOMMENT=Ctrl+2
+ID_UNDO=Ctrl+Z
+ID_UNINDENT=Shift+Tab
+ID_USE_SOFTTABS=Ctrl+Shift+I
+ID_ZOOM_IN=Ctrl++
+ID_ZOOM_NORMAL=Ctrl+0
+ID_ZOOM_OUT=Ctrl+-
